# product_search

./: .gitignore  Cargo.toml  README.md  justfile  spec.md
modelfiles/: parser.Modelfile  tendero.Modelfile
src/: main.rs
